# fys9429_project_pino

./: .pre-commit-config.yaml  FYS9429 Advanced Machine Learning in the Physical Sciences - Project for Bjørn Egil Ludvigsen.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.py
src/: __init__.py  app_controller.py  main.py
src/core/: __init__.py  data_processing.py  eclipse_reader.py  logging_config.py  physics.py  pino_model.py  prepare_training_data.py  test_resdata_open.py  visualization.py
src/core/utils/: data_loading.py
src/gui/: __init__.py  main_window.py
tests/test_gui/: test_data_loading_thread.py  test_main_window.py
tests/test_utils/: test_data_loading.py
